Correct spacing between list item in nav bar

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@ section#jumbotron{
     background-repeat: no-repeat;
     background-size: cover;
     padding-top: 31rem;
+    margin-top: 95px;
 }
 /* End Section jumbotron*/
 
